--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -69,7 +69,7 @@ header #nav #nav3 {
   font-size: 40px;
 }
 
-#preloader #preloaderid {
+#preloader {
   display: grid;
   grid-template-columns: auto 40vw auto;
   grid-template-areas: ". preloader ";
@@ -80,23 +80,22 @@ header #nav #nav3 {
   background-color: #E8C197;
 }
 @media (min-width: 768px) {
-  #preloader #preloaderid {
+  #preloader {
     grid-template-columns: auto 30vw auto;
   }
 }
 @media (min-width: 992px) {
-  #preloader #preloaderid {
+  #preloader {
     grid-template-columns: auto 25vw auto;
   }
 }
 @media (min-width: 992px) {
-  #preloader #preloaderid {
+  #preloader {
     grid-template-columns: auto 20vw auto;
   }
 }
-#preloader #preloaderid > div {
+#preloader #preloaderid {
   stroke-width: 1px;
-  stroke: red;
   grid-area: preloader;
   height: 100%;
   display: flex;
