added fade out to the end

--- a/dev/scss/sections/_hero.scss
+++ b/dev/scss/sections/_hero.scss
@@ -1,5 +1,5 @@
 #hero{
-    width: 100%;
+    margin: 0%;
     >div {
         background-image: url(../img/Kapoor-Motion-P1-herospot.jpg);
         background-position: center;
@@ -14,13 +14,9 @@
         #experienceart {
             section{
                 h1{
-                    // position: relative;
                     font-size: 120px;
                     color: white;
-                    // margin-right: 5%;
-                    // margin-left: 60%;
-                    // margin-top: 25%;
-                    padding-top: 5%;
+                    padding-top: 15%;
                     font-family: 'Prata', serif;
                     white-space: nowrap
                 }
@@ -28,11 +24,10 @@
         }
         #herologo{
             position: absolute;
-            bottom: 20px;
-            right: 20px;
-            section{
-                // margin-right: 30%;
-                // margin-top: 95%;
+            bottom: 26px;
+            #herologosvg{
+                width: 80%;
+                padding-right: 0% ;
             }
         }
     }
