--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -4,6 +4,11 @@
 @import "helpers/_mixins";
 @import "helpers/_variables";
 
+// Base Styles
+@import "base/_normalize";
+@import "base/_base";
+@import "base/_typography";
+
 // Component Styles
 @import "components/_navigation";
 
